<resources>
    <string name="app_name">时光猫</string>
    <string name="text_add_more">添加&#8230;</string>
    <string name="text_add_to_home_screen">添加到手机主屏</string>
    <string name="text_about">关于</string>
    <string name="text_accept">接受</string>
    <string name="text_tags">标签</string>
    <string name="text_add_tags">添加标签</string>
    <string name="text_add_location">添加位置</string>
    <string name="text_clear">清除</string>
    <string name="text_copy_text">复制文本</string>
    <string name="text_comments">备注</string>
    <string name="text_copy_link">复制链接</string>
    <string name="text_comment">备注</string>
    <string name="text_cancel">取消</string>
    <string name="text_close">关闭</string>
    <string name="text_created_time">创建</string>
    <string name="text_delete">删除</string>
    <string name="text_deleted">删除</string>
    <string name="text_delete_still">仍然删除</string>
    <string name="text_edit">编辑</string>
    <string name="text_find_in_page">在页面中查找</string>
    <string name="text_font">字体</string>
    <string name="text_next">下一个</string>
    <string name="text_last">上一个</string>
    <string name="text_give_up">放弃</string>
    <string name="text_last_modified_time">更新</string>
    <string name="text_last_sync_time">同步</string>
    <string name="text_chars_number">字符</string>
    <string name="text_more">更多</string>
    <string name="text_pick">选择</string>
    <string name="text_preview">预览</string>
    <string name="text_print_pdf">打印PDF</string>
    <string name="text_reset">重置</string>
    <string name="text_send">发送</string>
    <string name="text_settings">设置</string>
    <string name="text_share">分享</string>
    <string name="text_share_image">分享图片</string>
    <string name="text_share_text">分享文本</string>
    <string name="text_share_html">分享Html</string>
    <string name="text_search">搜索</string>
    <string name="text_save_or_discard">保存还是放弃所做的修改？</string>
    <string name="text_save_successfully">保存成功</string>
    <string name="text_error_when_save">保存数据的时候发生了错误</string>
    <string name="text_file_saved_to">文件被保存到%s</string>
    <string name="text_save">保存</string>
    <string name="text_statistic">数据统计</string>
    <string name="text_save_and_retry_to_add_shortcut">项目未保存，无法添加快捷方式，请保存后再次尝试.</string>
    <string name="text_save_and_retry">保存并再次尝试</string>
    <string name="text_tips">提示</string>
    <string name="text_warning">警告</string>
    <string name="text_location_info">位置信息</string>
    <string name="text_no_location_info">没有找到位置信息</string>
    <string name="text_show_location">显示位置信息</string>
    <string name="failed_to_get_location">获取位置信息失败</string>
    <string name="trying_to_get_location">正在尝试获取位置信息&#8230;</string>
    <string name="content_was_copied_to_clipboard">内容已复制到粘贴板</string>
    <string name="share_message_chooser">选择分享方式</string>
    <string name="cannot_get_link_of_not_synced_item">无法获取未同步的项目的链接</string>
    <string name="title_required">标题不能为空</string>
    <string name="successfully_add_shortcut">成功添加快捷方式</string>
    <string name="text_login">登录</string>
    <string name="text_register">注册</string>
    <string name="text_confirm">确定</string>
    <string name="text_back">返回</string>
    <string name="text_color">颜色</string>
    <string name="text_portrait">图标</string>
    <string name="set_successfully">设置成功</string>
    <string name="items">类目</string>
    <string name="text_other_ways">其他方式</string>
    <string name="text_trash">放进垃圾箱</string>
    <string name="text_archived">归档</string>
    <string name="text_move_out">移出</string>
    <string name="text_tab_again_exit">再按一次退出</string>
    <string name="text_attachment">附件</string>
    <string name="working">正在执行&#8230;</string>
    <string name="text_input_password_and_continue">输入密码继续</string>
    <string name="text_ok">好的</string>
    <string name="text_export_html">导出html</string>
    <string name="text_failed_to_load_data">加载数据失败</string>
    <string name="text_failed_to_modify_data">修改数据失败</string>
    <string name="text_pick_from_album">从相册中选择</string>
    <string name="check_network_availability">检查网络连接是否可用</string>
    <string name="need_to_complete">该功能尚待完善</string>
    <string name="dialog_notice_content_part1">用户你好！<![CDATA[<br/><br/>]]>由于时间限制仍然马克笔记有许多不足。我们邀请你来一起完善：</string>
    <string name="dialog_notice_content_part2">1.如果你喜欢马克笔记你可以在<![CDATA[<b>“设置->关于程序->翻译”</b> ]]>中协助开发者将马克笔记翻译成其他语言，或者在应用商店给该应用好评。</string>
    <string name="dialog_notice_content_part3">2.如果你有其他的需求想要实现，或者对马克笔记的功能有不满意的地方，可以通过<![CDATA[<b>Google+社区、Twitter、Weibo或者直接邮件</b>]]>的方式与开发者讨论需求。</string>
    <string name="dialog_notice_content_part4">3.如果你发现了马克笔记中存在BUG和意外崩溃，可以在<![CDATA[<b>“设置->信息反馈”</b>]]>或者<![CDATA[<b>直接邮件开发者</b>]]>进行反馈。</string>
    <string name="dialog_notice_content_part5">4.马克笔记会在后续推出一些新的功能和特性，如果你喜欢该应用，可以在<![CDATA[<b>“设置->支持开发”</b>]]>中支持程序的开发。</string>
    <string name="dialog_notice_content_part6">5.另外，你也可以通过<![CDATA[<b>Google+社区、Twitter和Weibo</b>]]>获取程序开发的最新动态，并可以参与测试。</string>
    <string name="dialog_notice_content_part7">请给予马克笔记更多的耐心，我们会努力做得更好。<![CDATA[<br/><br/>]]>最后，祝你使用愉快！</string>
    <string name="intro_1_title">欢迎使用 %s</string>
    <string name="intro_1_description">感谢您使用 %s\n\n一款帮助您提升工作效率\n记录生活中精彩时刻的\nMarkdown笔记应用</string>
    <string name="intro_2_title">Markdown</string>
    <string name="intro_2_description">Markdown语法支持\n分享、导出图片和PDF</string>
    <string name="intro_3_title">导出</string>
    <string name="intro_3_description">Html md/text png pdf等\n多种格式导出笔记</string>
    <string name="intro_4_title">主题</string>
    <string name="intro_4_description">日夜主题\n13种主色调 16种强调色</string>
    <string name="intro_5_title">附件</string>
    <string name="intro_5_description">手绘 图片 照片 视频\n音频 文件 位置</string>
    <string name="intro_6_title">祝您使用愉快</string>
    <string name="intro_6_description">加入社区！</string>
    <string name="empty_list_to_capture">要截取的列表为空</string>
    <string name="capture_list">列表截图</string>
    <string name="capturing">正在截取&#8230;</string>
    <string name="include_tags">包含标签</string>
    <string name="include_archived">包含归档</string>
    <string name="include_trashed">包含废纸篓</string>
    <string name="search_by_conditions">搜索 &#8230;</string>
    <string name="no_search_result_found">没有找到搜索结果</string>
    <string name="try_other_conditions">换个搜索条件试一下</string>
    <string name="drawer_menu_notes">笔记信息</string>
    <string name="drawer_menu_minds">小纸条</string>
    <string name="drawer_menu_tags">标签</string>
    <string name="drawer_menu_notices">提醒信息</string>
    <string name="drawer_menu_setting">设置</string>
    <string name="drawer_menu_trash">废纸篓</string>
    <string name="drawer_menu_archive">归档</string>
    <string name="drawer_menu_sync">数据同步</string>
    <string name="fab_opt_note">笔记</string>
    <string name="fab_opt_notebook">文集</string>
    <string name="fab_opt_tags">标签</string>
    <string name="fab_opt_capture">拍照</string>
    <string name="fab_opt_file">文件</string>
    <string name="fab_opt_draft">手写</string>
    <string name="fab_opt_link">链接</string>
    <string name="fab_opt_record">录音</string>
    <string name="fab_opt_notice">提醒</string>
    <string name="fab_quick_note">快速笔记</string>
    <string name="fab_sort_custom_fab">自定义浮动按钮</string>
    <string name="fab_sort_custom">自定义&#8230;</string>
    <string name="fab_sort_custom_fab_tip">拖动尾部的按钮进行排序，排在前面的5个按钮会被添加到浮动按钮菜单中进行显示。</string>
    <string name="fab_sort_save">保存修改</string>
    <string name="fab_sort_save_or_lose">保存或则放弃你对浮动按钮菜单所作的修改。</string>
    <string name="fab_sort_save_successfully">成功保存浮动菜单的设置</string>
    <string name="note_default_name">未命名笔记</string>
    <string name="content_failed_to_parse_intent">无法解析的意图</string>
    <string name="note_failed_to_read_file">读取文件内容失败</string>
    <string name="note_failed_to_get_note_content">读取笔记内容失败</string>
    <string name="text_no_such_note">没有找到该笔记</string>
    <string name="note_note_title">笔记标题</string>
    <string name="note_write_down_what_you_want">写下此刻的想法&#8230;</string>
    <string name="note_default_notebook">默认文集</string>
    <string name="edit_notebook">编辑文集</string>
    <string name="notebook_name">文集名称</string>
    <string name="pick_notebook_color">选择文集的颜色</string>
    <string name="note_capture_note">笔记截图</string>
    <string name="all_notes">全部笔记</string>
    <string name="text_replace_tab_with_4_spaces">使用4个空格替换退格</string>
    <string name="notes_list_empty">笔记列表为空</string>
    <string name="notes_list_empty_sub_normal">点击主界面的 + 按钮添加笔记</string>
    <string name="notes_list_empty_sub_archived">没有发现归档的笔记</string>
    <string name="notes_list_empty_sub_trashed">没有在垃圾箱中发现笔记</string>
    <string name="move_to_another_notebook">移动</string>
    <string name="moved_successfully">移动成功</string>
    <string name="msg_when_delete_notebook">删除该文集会同时删除包含的所有笔记和文集</string>
    <string name="pick_notebook">选择文集</string>
    <string name="no_notebook_available">没有可用的文集</string>
    <string name="pick_category">选择标签</string>
    <string name="no_category_available">没有可用标签</string>
    <string name="pick_portrait">选择图标</string>
    <string name="edit_tag">编辑标签</string>
    <string name="tag_name">标签名称</string>
    <string name="pick_tag_color">选择标签颜色</string>
    <plurals name="notes_number">
        <item quantity="one">%d 个笔记</item>
        <item quantity="other">%d 个笔记</item>
    </plurals>
    <string name="tag_delete_message">删除该标签不会删除其相关的笔记。</string>
    <string name="tags_list_empty">标签列表为空</string>
    <string name="tags_list_empty_sub_normal">点击主界面的 + 按钮添加标签</string>
    <string name="tags_list_empty_sub_archived">没有发现归档的标签</string>
    <string name="tags_list_empty_sub_trashed">没有在垃圾箱中发现标签</string>
    <string name="edit_quick_note">快速创建笔记</string>
    <string name="failed_to_create_file">创建文件失败</string>
    <string name="storage_not_available">存储空间不可用</string>
    <string name="failed_to_save_attachment">保存附件失败</string>
    <string name="add_attachment">添加附件</string>
    <string name="attachment_type_files">文件</string>
    <string name="attachment_type_images">图片</string>
    <string name="attachment_type_videos">视频</string>
    <string name="attachment_type_recordings">录音</string>
    <string name="attachment_type_sketches">手写</string>
    <string name="album">相册</string>
    <string name="net_image_link">图片链接</string>
    <string name="file">文件</string>
    <string name="create">创建</string>
    <string name="take_a_photo">拍摄照片</string>
    <string name="sound_record">录制音频</string>
    <string name="take_video">录制视频</string>
    <string name="sketch">手写</string>
    <string name="activity_not_found_to_resolve">没有找到可用的程序</string>
    <string name="use_to_open">用&#8230;打开</string>
    <string name="information">信息</string>
    <string name="failed_when_play_audio">播放音频时出现错误</string>
    <string name="failed_to_resolve_intent">没有找到可用的应用</string>
    <string name="confirm_to_clear_bitmap">确认全部擦除？</string>
    <string name="stroke">线宽</string>
    <string name="opacity">透明度</string>
    <string name="saturation">饱和度</string>
    <string name="file_not_exist">文件不存在</string>
    <string name="pick_alarm_type">选择闹钟类型</string>
    <string name="one_shot">一次</string>
    <string name="every_day">每天</string>
    <string name="every_weekday">每周工作日(周一至周五)</string>
    <string name="every_weekend">每周周末(周六、周日)</string>
    <string name="custom_by_week">按周自定义</string>
    <string name="custom_by_month">按月自定义</string>
    <string name="clear_reminder">清除提醒</string>
    <string name="day_concat">,</string>
    <string name="from">从</string>
    <string name="to">到</string>
    <string name="at">在</string>
    <string name="until">直到</string>
    <string name="model_name_none">None</string>
    <string name="model_name_note">笔记</string>
    <string name="model_name_notebook">文集</string>
    <string name="model_name_alarm">闹钟</string>
    <string name="model_name_attachment">附件</string>
    <string name="model_name_location">位置</string>
    <string name="md_input_rows_number">输入行数</string>
    <string name="md_input_cols_number">输入列数</string>
</resources>